# projeto_ecommerce

./: main.py  pyproject.toml
app/controllers/: product_controller.py
