[tool.poetry]
name = "ecommerce-back"
version = "0.1.0"
description = ""
authors = ["felipe <felipebrdv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
